# boids-rs

./: Cargo.toml  README.md
src/: boid.rs  flock.rs  main.rs  systems.rs
src/components/: boid.rs  directions.rs  mod.rs
src/resources/: flock.rs  mod.rs
src/systems/: run.rs
