[package]
name = "boids-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = "0.7"
bevy-inspector-egui = { version = "0.10", optional = true }
bevy_prototype_lyon = "0.5.0"
rand = "0.8.5"
